[package]
name = "real_time_dof_rendering"
version = "0.1.1"
authors = ["laochanlam <laochanlam@gmail.com>"]

[dependencies]
# Image manipulation
image = '*'
# TODO: describe this plz
num = '*'
num-traits = "0.1.32"
# GUI library

relm = "^0.11.0"
relm-derive = "^0.11.0"
gdk-pixbuf = "*"

[dependencies.gtk]
version = "*"
features = ["v3_16"]